feature - adding task-list (#94)
* feature - adding task-list

* fix - fix for lint

* fix - fix for unit tests
