# libs/nest/aqua/src/lib/controllers/models/set-light-job-status.ts
@@ -1,6 +1,0 @@
-import { ApiProperty } from '@nestjs/swagger';
-
-export class SetLightJobStatus {
-  @ApiProperty()
-  public isActive!: boolean;
-}
