# libs/nest/cloud/src/lib/controllers/models/circular-pump/get-circular-pump-preferences.ts
@@ -1,15 +1,0 @@
-import { ApiProperty } from '@nestjs/swagger';
-
-export class GetCircularPumpPreferences {
-  @ApiProperty()
-  public isActive!: boolean;
-
-  @ApiProperty()
-  public homeDeviceId?: string;
-
-  @ApiProperty()
-  public circularPumpStartTime?: Date;
-
-  @ApiProperty()
-  public circularPumpEndTime?: Date;
-}
