# libs/nest/device/src/lib/controllers/models/get-all-device-filters.ts
@@ -1,0 +1,14 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class GetAllDeviceFilters {
+  @ApiProperty({ required: false, nullable: true })
+  public deviceType?: number;
+
+  @ApiProperty()
+  @ApiProperty({ required: false, nullable: true })
+  public withTaskAssigned?: boolean;
+
+  @ApiProperty()
+  @ApiProperty({ required: false, nullable: true })
+  public isOpen?: boolean;
+}
